--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,15 +16,15 @@
 	            <h3>로그인</h3>
 	            <div>
 	                <label for="id">아이디</label>
-	                <input type="text" name="id">
+	                <input type="text" name="id" id="id">
 	            </div>
 	            <div>
 	                <label for="password">비밀번호</label>
-	                <input type="password" name="password">
+	                <input type="password" name="password" id="password">
 	            </div>
 				<div>
-		            <button onclick="signUp();">로그인</button>
-		            <button onclick="window.location.href='/signup'">회원가입</button>
+		            <button>로그인</button>
+		            <a href="signup">회원가입</a>
 				</div>		            
 	        </form>
 	    </div>
