--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원가입</title>
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./js/index.js">
 </head>
 <script type="text/javascript">
     function signUp() {
         // 폼의 각 필드를 확인합니다.
-        if (document.signupForm.id.value == "") {
+    /*     if (document.signupForm.id.value == "") {
             alert("아이디를 입력해주세요");
             signupForm.id.focus();
             return false;  // 여기서 false를 반환하면 폼이 제출되지 않음
         }
+		console.log("tttttttttt" + document.signupForm.id.value );
         if (document.signupForm.password.value == "") {
             alert("비밀번호를 입력해주세요");
             signupForm.password.focus();
@@ -29,36 +28,42 @@
             alert("이메일을 입력해주세요");
             signupForm.email.focus();
             return false;
-        }
-
+        } */
+		console.log("aaaaaaaaaaaaaaa");
+        // action을 절대 경로로 수정
+		document.signupForm.action = "/signup_action"; 
+        document.signupForm.method = "POST";	
         document.signupForm.submit(); 
     }
 </script>
+
 <body>
     <div class="menu">
-
     </div>
     <div>
-        <form name="signupForm" method="post">
+        <form name="signupForm" id = "signupForm">
             <h3>회원가입</h3>
             <div>
                 <label for="id">아이디</label>
-                <input type="text" name="id">
+                <input type="text" name="id" id="id">
             </div>
             <div>
                 <label for="password">비밀번호</label>
-                <input type="password" name="password">
-                
+                <input type="password" name="password" id="password">
+            </div>
             <div>
                 <label for="password2">비밀번호확인</label>
-                <input type="password" name="password2">
+                <input type="password" name="password2" id="password2">
             </div>
             <div>
                 <label for="email">이메일</label>
-                <input type="text" name="email">
+                <input type="text" name="email" id="email">
             </div>
-            <button onclick="signUp();">회원가입</button>
+            <input type="button" value="회원 가입" onclick="signUp();">
         </form>
+    </div>
+</body>
+
     </div>
 </body>
 </html>
