chore: userRestController 작성중

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 	    // 폼의 각 필드를 확인합니다.
 		if (document.loginForm.id.value == "") {
 	        alert("아이디를 입력해주세요");
-	        loginForm.id.focus();
+	        loginForm.username.focus();
 	        return false; 
     	}
 		if(document.loginForm.password.value == ""){
