--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -27,25 +27,6 @@
 	</script>
 	</head>
 	<body>
-	 	<div class="menu">
-	
-	    </div>
-	    <div>
-	        <form name="loginForm" method="post">
-	            <h3>로그인</h3>
-	            <div>
-	                <label for="id">아이디</label>
-	                <input type="text" name="id" id="id">
-	            </div>
-	            <div>
-	                <label for="password">비밀번호</label>
-	                <input type="password" name="password" id="password">
-	            </div>
-				<div>
-		            <button onclick="login();">로그인</button>
-		            <a href="signup">회원가입</a>
-				</div>		            
-	        </form>
-	    </div>
+		<h2>만들거</h2>		
 	</body>
 </html>
