--- a/src/main/resources/templates/login-error.html
+++ b/src/main/resources/templates/login-error.html
@@ -14,6 +14,6 @@
     </div>
 
     <p>아이디 또는 비밀번호를 확인하고 다시 시도해주세요.</p>
-    <a href="/user/login">로그인 페이지로 돌아가기</a>
+    <a href="/home">로그인 페이지로 돌아가기</a>
 </body>
 </html>
