--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -18,7 +18,9 @@
     margin: 0;
     padding: 0;
 }
-
+li{
+    list-style: none;
+}
 /* 기본 바디 스타일 */
 body {
     font-family: 'Pretendard-Regular';
@@ -120,4 +122,71 @@ a:hover {
     font-size: 14px;
     color: tomato;
     text-align: left;
+}
+
+/*task*/
+.additionBtn{
+    width: 400px; height: 40px;
+    margin: 0 auto;
+}
+.additionBtn input{
+    width: 100%; height: 100%;
+    cursor: pointer;
+    background-color: #3361D4;
+    color: white;
+    font-size: 25px;
+    border: 0px;
+    border-radius: 10px;
+}
+.additionBtn input:hover{
+    background-color: #204396;
+}
+.taskList{
+    margin-top: 20px;
+}
+.taskList .task {
+    width: 400px; height: 50px;
+    line-height: 50px;
+    display: flex;
+    margin: 0 auto;
+    background-color: white;
+    border-radius: 10px;
+}
+.task li{
+   
+}
+.task li:first-child{
+    width: 50px; height: 30px;
+    line-height: 30px;
+    background-color: #989898;
+    border-radius: 13px;
+    text-align: center;
+    margin: 12px 0 0 20px;
+    color: white;
+}
+.task li:nth-child(2){
+    width: 280px;
+    margin-left: 10px;
+    font-size: 20px;
+}
+.task li:nth-child(3) {
+    margin-top: 2px;
+}
+.task li:nth-child(3) input{
+    width: 30px; height: 30px;
+    line-height: 33px;
+    cursor: pointer;
+    color: #3361D4;
+    border: 0px;
+    border-radius: 50px;
+    background-color: #E4E4E4;
+    font-size: 23px;
+}
+.subContent{
+    /* display: none; */
+    width: 400px; height: 180px;
+    margin: 0 auto;
+    padding: 10px 15px;
+    background-color: white;
+    border-radius: 0 0 10px 10px;
 }
