--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Todo List </title>
-	<link rel="stylesheet" href="./css/index.css" type="text/css">
+	<link rel="stylesheet" href="../static/css/index.css" type="text/css">
 	</head>
 	<script type="text/javascript">
 		function login(){
