--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Todo List </title>
-	<link rel="stylesheet" href="../static/css/index.css" type="text/css">
+	<link rel="stylesheet" href="css/index.css" type="text/css">
 	</head>
 	<script type="text/javascript">
 		function login(){
@@ -23,7 +23,7 @@
 				<input type="password" name="password" class="password" placeholder="비밀번호">
 				<div class="buttonContainer">
 					<input type="button" value="로그인" onclick="login()">
-					<input type="button" value="회원가입" onclick="location.href='user/signup'">
+					<input type="button" value="회원가입" onclick="location.href='/signup'">
 				</div>
 			</form>
 		</div>
