--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> 할 일 </title>
-	<link rel="stylesheet" href="../static/css/index.css">
+	<link rel="stylesheet" href="css/index.css">
     <style>
 	</style>
 	<script type="text/javascript">
