--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,8 +19,8 @@
 				<p>Todo List</p>
 			</div>
 			<form  name="loginForm" class="loginForm">
-				<input type="text" name="id" class="id" placeholder="아이디">
-				<input type="password" name="password" class="password" placeholder="비밀번호">
+				<input type="text" name="id" class="id" placeholder="아이디" autocomplete="off">
+				<input type="password" name="password" class="password" placeholder="비밀번호" autocomplete="off">
 				<div class="buttonContainer">
 					<input type="button" value="로그인" onclick="login()">
 					<input type="button" value="회원가입" onclick="location.href='/signup'">
