--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -36,7 +36,7 @@
 
 
         
-		document.signupForm.action = "signup"; 
+		document.signupForm.action = "@{/signup}"; 
         document.signupForm.method = "POST";	
         document.signupForm.submit(); 
     }
