--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
 	</head>
 	<script type="text/javascript">
 		function login(){
-			document.loginForm.action = "@{/login}";
+			document.loginForm.action = "login";
 			document.loginForm.method = "POST";
 			document.loginForm.submit();
 		}
